--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
     "nuxt": "^3.10.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@nuxt/fonts": "^0.3.0",
+    "@nuxtjs/color-mode": "^3.3.2",
+    "@nuxtjs/seo": "2.0.0-rc.9",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
