--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/seo": "2.0.0-rc.9",
     "autoprefixer": "^10.4.18",
+    "nuxt-icon": "^0.6.9",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   }
