--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@nuxt/fonts": "^0.3.0",
     "@nuxtjs/color-mode": "^3.3.2",
+    "@nuxtjs/plausible": "^0.2.4",
     "@nuxtjs/seo": "2.0.0-rc.9",
     "autoprefixer": "^10.4.18",
     "nuxt": "^3.11.0",
